<resources>
    <string name="app_name">TIMERUNNER</string>
    <string name="preference_file_key"></string>
    <string name="reset_password">Reset Password</string>
    <string name="incorrect_username_password">Incorrect username or password.</string>
    <string name="json_error">A JSON error has occurred.</string>
    <string name="server_error">A server error has occurred.</string>
    <string name="server_down">The Timerunner service is currently unavailable.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="user_name_hint">username</string>
    <string name="password_hint">password</string>
    <string name="clock_in_toast">You have clocked in</string>
    <string name="clock_out_toast">You have clocked out</string>
    <string name="clock_in_btn_text">Clock in</string>
    <string name="clock_out_btn_text">Clock out</string>
    <string name="clock_in_reminder_ticker">Want to clock in?</string>
    <string name="clock_in_reminder_title">Clock in to TimeRunner?</string>
    <string name="clock_in_reminder_text">Tap to clock in</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_enable_messenger">Enable messenger</string>
    <string name="pref_description_enable_messenger">Enable the messaging feature. If
        enabled, you will be shown as available for messaging to co-workers.
    </string>

    <string name="pref_title_left_handed">Left handed layout</string>
    <string name="pref_left_handed">Change the layout of the menus to better fit left-handed
        users when using one hand.
    </string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_message_alert_sound">Message sound</string>
    <string name="pref_title_message_vibrate">Vibrate on message</string>

    <string name="pref_alert_silent">Silent</string>


    <string name="pref_title_clock_notifications">Clock reminder notifications</string>
    <string name="pref_title_wifi_name">Office WiFi network name</string>
    <string name="pref_default_wifi_name">Work-WiFi</string>
    <string name="pref_title_clock_alert_sound">Clock reminder sound</string>
    <string name="pref_title_clock_vibrate">Vibrate on clock reminder</string>
    <string name="welcome">Welcome</string>
    <string name="employee_name">Employee</string> <!-- placeholder for employee name -->
    <string name="clock_duration_lab">You\'ve been clocked in for</string>
    <string name="settings_menu">Settings</string>
    <string name="logout_menu">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timer_initial">00:00:00</string>

</resources>
