<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_clock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.t25.hbv601g.timerunner.ClockActivity">

    <TextView
        android:id="@+id/employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28dp"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/btn_clock"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/lab_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSecondary"
        android:textSize="26dp"
        android:text="@string/welcome"
        android:layout_above="@+id/employee_name"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clock!"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_mini"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSecondary"
        android:textSize="56dp"
        android:layout_below="@+id/btn_popup_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp" />

    <TextView
        android:id="@+id/clock_duration_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clock_duration_lab"
        android:textColor="@color/colorSecondary"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/timer_display"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/timer_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_initial"
        android:layout_marginBottom="61dp"
        android:layout_above="@+id/imageView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26dp"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/btn_popup_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hamburger"
        android:background="@color/colorBackground"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
